<resources>
    <string name="app_name">HomWork8</string>
    <string name="tv_username_hint">Введите имя</string>
    <string name="et_username_hint">Введите имя</string>
    <string name="tv_sign_in_text">Вход</string>
    <string name="tv_sign_in">Выполните вход</string>
    <string name="tv_sign_in_text1">Добро пожаловать!</string>
    <string name="tv_in_text">или зарегистрируйтесь.</string>
    <string name="et_sign_in_text">Введите вашу почту</string>
    <string name="et_sign_in">Введите пороль</string>
    <string name="et_sign_in_text1">Войти</string>
    <string name="tv_in_text1">Забыл пароль?</string>
    <string name="tv_text_in_sign">Нажми сюда</string>
</resources>