<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/line1"
        android:src="@drawable/img_1"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_sign_in_tex1t"
        android:layout_marginTop="250dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
        android:text="@string/tv_sign_in_text1"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_sign_in_text"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/tv_sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_marginTop="-40dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/tv_in_text"
        android:layout_marginTop="-30dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/tv_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<LinearLayout
    android:layout_width="346dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="150dp">

    <EditText
        android:id="@+id/et_sign_in_text"
        android:paddingStart="10dp"
        android:hint="@string/et_sign_in_text"
        android:background="@drawable/raunder"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/et_sign_in"
        android:paddingStart="10dp"
        android:hint="@string/et_sign_in"
        android:layout_marginTop="20dp"
        android:background="@drawable/raunder"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/et_sign_in_text1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/et_sign_in_text1"
        app:backgroundTint="#A6A6A6"
        android:layout_marginTop="20dp"
        android:background="@drawable/raunder"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/tv_in_text1"
        android:layout_marginStart="70dp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:text="@string/tv_in_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_text_in_sign"
        android:layout_marginTop="-20dp"
        android:textColor="#FF7000"
        android:layout_marginStart="170dp"
        android:text="@string/tv_text_in_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>


</FrameLayout>
